--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "folium>=0.19.5",
+    "geopy>=2.4.1",
     "numpy>=2.2.5",
     "pandas>=2.2.3",
 ]
